# Calibrate

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  make.ps1  make.sh
.github/workflows/: build-linux.yml  build-windows.yml  build.yml  linux-clang.yml  linux-gcc.yml  windows-clang.yml  windows-msvc.yml
.gitlab/: .gitlab-ci.yml
chessboard/: CMakeLists.txt
chessboard/include/chessboard/: chessboard.hpp  cornersort.hpp  cornersorthelper.hpp  dsu.hpp  geometry.hpp  timer.hpp
chessboard/src/: chessboard.cpp  cornersort.cpp  cornersorthelper.cpp  dsu.cpp  timer.cpp
cmake/: addtarget.cmake  clangformat.cmake  clangtidy.cmake  copydll.cmake  findopencv.cmake  myself.cmake  platform.cmake  sanitize.cmake
test/: CMakeLists.txt  config.h.in
test/src/: test.cpp
unittest/: CMakeLists.txt  config.h.in
unittest/src/: unittest.cpp
